# CDI

./: README.md
ner/: generate-ner.sh  ner.sh  ner_deploy.sh
pipeline/: pipeline.sh
py-story-clust/: .gitignore  distance_matrix.py  gen_cooccur_mat.py  gen_cooccur_mat.sh  mds_plot.py  stopwords.txt  story-cluster.py  tree_pursuit.py  triplet_initial_matrix.txt
py-story-clust/biclustering/: biclustering.py
py-story-clust/cooccurrence/: cluster_triplets.py  cooccur_mat.py  gen_cooccur_mat.py  gen_cooccur_mat.sh  gen_sub_distribution_mat.py  matrix_viewer.py  triplets_mat.py
py-story-clust/mat/: np.voc  np1.voc  np2.voc  np_to_delete.voc  similarity_mat_np1.txt  similarity_mat_np2.txt  similarity_np1.npy  similarity_np1.voc  similarity_np2.npy  similarity_np2.voc  vp.voc  vp_to_delete.voc
py-story-clust/model/: aot.py  corpus.py  topic_tree.py
py-story-clust/ocr/: NewsList.txt  ocr_insert.py  stopwords.txt  story.py
py-story-clust/preprocessing/: cleansing.py  preprocessing.py  preprocessing.sh  segment.py  segment.sh  stopwords.txt  word_morphy.py
py-story-clust/storyclustering/: storyclustering.py
py-story-clust/tools/: README.md  gen_cooccur_mat.py  gen_new_vocab.py  gen_similarity_mat.py  gen_sub_distribution_mat.py  matrix_viewer.py
py-story-clust/triplet_files/: 0_0_NULL.txt  0_10_Sports|Olympics.txt  0_11_Politics|Obama-assassination-threat.txt  0_12_Politics|Clinton-convention-role.txt  0_13_Disaster:Teaser|Flooding-Vegas.txt  0_14_Justice|Mayor-jail-time.txt  0_15_Justice|Mayor-home-raided.txt  0_16_Accident|Texas-bus-crash.txt  0_17_Accident|Florida-toddler-search.txt  0_18_Disaster|Flooding-Vegas.txt  0_19_Justice|Mayor-jail-time.txt  0_1_War:Teaser|South-Ossetia-war.txt  0_20_Money|Fannie-mortgage-loans.txt  0_21_Politics|McCain-speech-economy.txt  0_22_Politics|Obama-speech-economy.txt  0_23_War:Teaser|South-Ossetia-war.txt  0_24_War|South-Ossetia-war.txt  0_25_Entertainment:Teaser|Young-tattoo-artist.txt  0_26_Entertainment|Young-tattoo-artist.txt  0_2_Accident:Teaser|Florida-toddler-search.txt  0_3_War|South-Ossetia-war.txt  0_4_Accident|Texas-bus-crash.txt  0_5_War|Iraq-war-troop-pullout.txt  0_6_Disaster|Flooding-New-Hampshire.txt  0_7_War:Teaser|South-Ossetia-war.txt  0_8_Sports:Teaser|Olympics.txt  0_9_War|South-Ossetia-war.txt  10_0_NULL.txt  10_10_Politics|McCain-campaign.txt  10_11_Politics:Teaser|Obama-convention.txt  10_12_Accident|Texas-bus-crash.txt  10_12_International|UN-consultation-South-Ossetia.txt  10_13_Politics|McCain-campaign.txt  10_14_Politics|Obama-campaign.txt  10_15_Politics|Democratic-convention.txt  10_16_Entertainment:Teaser|Isaac-Hayes-death.txt  10_17_War|South-Ossetia-war.txt  10_18_Activism|Montreal-riot.txt  10_19_Justice|Kilpatrick-assault-case.txt  10_1_War|South-Ossetia-war.txt  (+1195 more)
py-story-clust/visualize/: Dendrogram.html  data.json  story-hierarchy.html
py-story-clust/vocabulary/: triplet_vocabulary.py  vocabulary.py
scripts/: cleansing.py  commercial-capture.py  phrase-count.py  phrases.csv
scripts/count-phrases/: phrase-count.py  upload.sh
story-classification/: .gitignore  CMakeLists.txt  Makefile  TextAnalysis  TextAnalysis.cpp  TextAnalysis.h  classifier.cpp  classifier.h  comatrix.cpp  comatrix.h  definitions.h  main.cpp  plot_seg.m  segmenter.cpp  segmenter.h  stopwords.h  story-classification.sublime-project  story-classification.sublime-workspace  sync.sh  topic_model.h  utility.cpp  utility.h
story-classification/wnb/: CMakeLists.txt  nltk_similarity.hh
sw-clust/: potts.py  sw-example.py  sw_process.py  topic_clust.py  topic_clustering_sw_process.py
sw-clust/algorithm/: __init__.py  sw.py
sw-clust/model/: __init__.py  classifier.py  document.py  graph_cycle.py  nodes.py  probability.py  segment.py  segmentation_model.py  sentence.py  topic_model.py  word_similarity.py
sw-clust/parameter_selection/: data.m  sw.m
sw-clust/preprocessing/: cc-Vandy  cleansing.py  func.py  model_segmenter.txt  nodes.py  probability.py  readingfiles.py  readtestfile.py  topic_label_align.py  triplet_file_transform.py  vocabulary.py
sw-clust/statistics/: statistics.py
sw-clust/triplet_files/: 20080808132325.736_Sports|Olympics.txt  20080808143154.977_Justice|Mayor-jail-time.txt  20080808143443.512_Accident|Florida-toddler-search.txt  20080808143720.069_Disaster|Flooding-Vegas.txt  20080808144313.889_Money|Fannie-mortgage-loans.txt  20080808150754.004_Politics:Teaser|Clinton-convention-role.txt  20080808151205.355_War|South-Ossetia-war.txt  20080808151502.099_Politics|McCain-speech.txt  20080808151511.041_Politics|Clinton-convention-role.txt  20080808151839.583_Environment|Olympics-air-quality.txt  20080808152312.255_Human-interest|Olympics-lucky-number-8.txt  20080808152909.512_War|South-Ossetia-war.txt  20080808155438.406_Politics|Obama-speech-economy.txt  20080808170845.590_Money|Mortgage-loans.txt  20080808171535.600_Politics|Cheney-RNC-convention-invitation.txt  20080811130712.063_Weather|US.txt  (+144 more)
tools/: upload-aligner.sh
transcript-aligner/: CMakeLists.txt  README.md  align-transcript-single  align-transcripts.sh  deploy.sh  htmlparser.py  matchall.py  matchfile.py  rematch.py  timezone.py
transcript-aligner/scripts/: config.py  htmlparser.py  matchall.py  matchfile.py  rematch.py
transcript-aligner/src/: aligner.cpp  aligner.h  caption_transcript.h  person_detector.cpp  person_detector.h
transcript-aligner/src/utils/: datetime_utility.cpp  datetime_utility.h  string_utility.cpp  string_utility.h
(+4175 files in other folders)
